[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gem/Bank.gd" type="Script" id=1]
[ext_resource path="res://Gem/Gem.tscn" type="PackedScene" id=2]

[node name="Bank" type="Panel"]
margin_left = 956.218
margin_top = 53.5636
margin_right = 1335.22
margin_bottom = 786.564
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Gem = ExtResource( 2 )

[node name="BlueBank" type="Button" parent="."]
margin_left = 218.576
margin_top = 62.2813
margin_right = 268.576
margin_bottom = 112.281
rect_pivot_offset = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" parent="BlueBank" instance=ExtResource( 2 )]
position = Vector2( 25.1425, 25.7454 )
color = "blue"

[node name="BrownBank" type="Button" parent="."]
margin_left = 216.794
margin_top = 174.534
margin_right = 266.794
margin_bottom = 224.534
rect_pivot_offset = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" parent="BrownBank" instance=ExtResource( 2 )]
position = Vector2( 25.1425, 25.7454 )
color = "blue"

[node name="GreenBank" type="Button" parent="."]
margin_left = 225.703
margin_top = 274.315
margin_right = 275.703
margin_bottom = 324.315
rect_pivot_offset = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" parent="GreenBank" instance=ExtResource( 2 )]
position = Vector2( 25.1425, 25.7454 )
color = "blue"

[node name="RedBank" type="Button" parent="."]
margin_left = 224.452
margin_top = 364.323
margin_right = 274.452
margin_bottom = 414.323
rect_pivot_offset = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" parent="RedBank" instance=ExtResource( 2 )]
position = Vector2( 25, 25 )
color = "blue"

[node name="WhiteBank" type="Button" parent="."]
margin_left = 222.139
margin_top = 484.567
margin_right = 272.139
margin_bottom = 534.567
rect_pivot_offset = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" parent="WhiteBank" instance=ExtResource( 2 )]
position = Vector2( 25.1425, 25.7454 )
color = "blue"

[node name="GoldBank" type="Button" parent="."]
margin_left = 220.358
margin_top = 586.13
margin_right = 270.358
margin_bottom = 636.13
rect_pivot_offset = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" parent="GoldBank" instance=ExtResource( 2 )]
position = Vector2( 25.1425, 25.7454 )
color = "blue"

[connection signal="pressed" from="BlueBank" to="." method="_on_BankButton_pressed" binds= [ "blue" ]]
[connection signal="pressed" from="BrownBank" to="." method="_on_BankButton_pressed" binds= [ "brown" ]]
[connection signal="pressed" from="GreenBank" to="." method="_on_BankButton_pressed" binds= [ "green" ]]
[connection signal="pressed" from="RedBank" to="." method="_on_BankButton_pressed" binds= [ "red" ]]
[connection signal="pressed" from="WhiteBank" to="." method="_on_BankButton_pressed" binds= [ "white" ]]
[connection signal="pressed" from="GoldBank" to="." method="_on_BankButton_pressed" binds= [ "gold" ]]
